--- a/index.html
+++ b/index.html
@@ -440,9 +440,12 @@
 
     <!-- Footer -->
     <footer class="py-16 px-8 bg-brand-green text-brand-beige">
-        <div class="max-w-7xl mx-auto flex justify-center">
+        <div class="max-w-7xl mx-auto flex flex-col items-center">
             <div class="text-[10px] tracking-widest opacity-30 uppercase text-center">
                 © 2025 LE FUSION LTD. ALL RIGHTS RESERVED.
+            </div>
+            <div class="text-[10px] tracking-widest opacity-30 text-center mt-2">
+                95428905 樂富生活有限公司
             </div>
         </div>
     </footer>
